tests/baselines/reference/nodeModulesResolveJsonModule(module=nodenext).errors.txt
error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/conformance/node/index.mts(1,17): error TS7062: JSON imports are experimental in ES module mode imports.
tests/cases/conformance/node/index.mts(3,21): error TS7062: JSON imports are experimental in ES module mode imports.
tests/cases/conformance/node/index.ts(1,17): error TS7062: JSON imports are experimental in ES module mode imports.
tests/cases/conformance/node/index.ts(3,21): error TS7062: JSON imports are experimental in ES module mode imports.


!!! error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/conformance/node/index.ts (2 errors) ====
    import pkg from "./package.json"
                    ~~~~~~~~~~~~~~~~
!!! error TS7062: JSON imports are experimental in ES module mode imports.
    export const name = pkg.name;
    import * as ns from "./package.json";
                        ~~~~~~~~~~~~~~~~
!!! error TS7062: JSON imports are experimental in ES module mode imports.
    export const thing = ns;
    export const name2 = ns.default.name;
==== tests/cases/conformance/node/index.cts (0 errors) ====
    import pkg from "./package.json"
    export const name = pkg.name;
    import * as ns from "./package.json";
    export const thing = ns;
    export const name2 = ns.default.name;
==== tests/cases/conformance/node/index.mts (2 errors) ====
    import pkg from "./package.json"
                    ~~~~~~~~~~~~~~~~
!!! error TS7062: JSON imports are experimental in ES module mode imports.
    export const name = pkg.name;
    import * as ns from "./package.json";
                        ~~~~~~~~~~~~~~~~
!!! error TS7062: JSON imports are experimental in ES module mode imports.
    export const thing = ns;
    export const name2 = ns.default.name;
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "type": "module",
        "default": "misedirection"
    }